# trial-cloud-run

./: .envrc  pyproject.toml
run/helloworld/: Dockerfile
